# cli-generator

./: .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  API_V2_OR_AND_BATCH_ANALYSIS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.api  Dockerfile.docs  GETTING_STARTED-api.md  GETTING_STARTED-javascript.md  GETTING_STARTED-python.md  GETTING_STARTED-r.md  GETTING_STARTED.md  LICENSE  README.html  README.md  RELEASING.md  package-lock.json  proptest.toml  pyproject.toml  pyrightconfig.json  tarpaulin.toml
.cargo/: config.toml
.githooks/: pre-commit
.github/: copilot-instructions.md
agent-logs/: 2026-03-16_002_cli-generator-implementation.md  2026-03-16_003_synonyms-archive-autoupdate.md  2026-03-17_001_query-builder-iteration-1.md  2026-03-17_002_query-builder-iterations-2-3.md  2026-03-19_004_preview-update-integration-tests.md  2026-03-19_005_coverage-three-modules.md  2026-03-19_006_phase-0-complete-90-percent.md  2026-03-19_007_phase-1-error-testing.md  2026-03-20_001_describe-feature-yaml-fix.md  2026-03-23_008_phase-2-describe-feature.md  2026-04-15_001_snippet-generated-project-integration.md  2026-04-15_002_r-snippets-complete.md  2026-04-16_001_phase-0-sdk-method-parity.md  2026-04-17_001_phase3-parse-response-status.md  2026-04-17_002_quarto-docs-generation.md  2026-04-17_003_double-underscore-and-new-parse-fns.md  2026-04-17_004_to-tidy-records-implementation.md  2026-04-17_005_phase35-msearch-batch-queries.md  2026-04-20_001_api-aggregation-refactoring-plan.md  2026-04-20_002_plan-revision-ground-truth.md  2026-04-20_003_phase-4-5-browser-wasm-complete.md  2026-04-20_004_numeric-normalization-response-cleanup.md  2026-04-21_001_validate-query-json-refactor.md  2026-04-21_001_validation-level-configuration.md  2026-04-22_001_cross-language-test-coverage.md  2026-04-22_001_ui-url-support.md  2026-04-22_002_validation-architecture-simplification.md  2026-04-22_003_stronger-url-state-assertions.md  2026-04-27_001_add-r-helper-and-enable-deep-validation.md  2026-04-29_001_api-startup-and-metadata-cache.md  2026-04-30_001_phase-4-report-axis-parsing.md  2026-05-01_001_phase-0-envelope-consistency.md  2026-05-01_002_phase-1-shared-es-infra.md  2026-05-05_001_searchbatch-lineage-completion.md  2026-05-05_002_phase-3a1-top-level-or-support.md  2026-05-05_003_phase-3a3-documentation-versioning.md  2026-05-05_004_phase-3b-sdk-methods.md  2026-05-06_001_phase-6a-report-api-core.md  2026-05-06_009_config-driven-sdk-architecture.md  2026-05-06_010_scatter-report-implementation.md  (+25 more)
config/: .gitkeep  es_integration.docker.toml  es_integration.toml  es_integration.toml.example  swagger-examples-goat.yaml
crates/genomehubs-api/: Cargo.toml
crates/genomehubs-api/src/: es_client.rs  es_metadata.rs  fetch_records.rs  index_name.rs  main.rs  phylopic_client.rs  swagger_customise.rs
crates/genomehubs-api/src/report/: agg.rs  arc.rs  bounds.rs  field.rs  filter_expr.rs  mod.rs  pipeline.rs  report_types.rs  spec_builder.rs
crates/genomehubs-api/src/report/positional/: feature_query.rs  layout.rs  mod.rs  painter.rs  region.rs  window.rs
crates/genomehubs-api/src/routes/: batchSearch.rs  chain_executor.rs  count.rs  countBatch.rs  count_batch.rs  deserialize_helpers.rs  indices.rs  lineage_agg.rs  lookup.rs  lookup_batch.rs  metadata.rs  mod.rs  phylopic.rs  positional.rs  record.rs  record_batch.rs  report.rs  report_batch.rs  result_fields.rs  search.rs  searchBatch.rs  search_batch.rs  status.rs  summary.rs  summary_batch.rs  taxonomic_ranks.rs  taxonomies.rs
crates/genomehubs-api/tests/: count_builder.rs  e2e_scatter_axis_types.rs  search_builder.rs
crates/genomehubs-query/: Cargo.toml
crates/genomehubs-query/src/: describe.rs  lib.rs  lineage_summary.rs  parse.rs  snippet.rs  types.rs  validation.rs
crates/genomehubs-query/src/local_report/: builder.rs  mod.rs  tsv.rs
crates/genomehubs-query/src/parse_local/: busco.rs  cat_file.rs  fai.rs  feature_set.rs  lengths.rs  mod.rs
crates/genomehubs-query/src/query/: attributes.rs  chain.rs  identifiers.rs  mod.rs  url.rs
crates/genomehubs-query/src/report/: axis.rs  bounds.rs  display.rs  hybrid.rs  layout.rs  mod.rs  plot_spec.rs  positional.rs  spec_builder.rs
crates/genomehubs-query/tests/: fix_y_axis.rs
docker/: nginx-docs.conf
docs/: AUDIT-SUMMARY.md  HISTORY.md  MAIN.md  REORGANIZATION-CHECKLIST.md  SearchQuery-Analysis.md  api-aggregation-refactoring-plan.md  api-audit-action-checklist.md  api-audit-and-migration.md  api-audit-executive-summary.md  coverage-measurement.md  goat-cli-gap-analysis.md  multi-language-sdk-plan.md  phase-1-error-testing-plan.md  phase-6-sdk-testing.md  post-mvp-roadmap.md  query-builder-plan.md  resultfields-implementation-guide.md  sdk-parse-parity-plan.md  test-coverage-strategy.md  test-scripts-reference.md  testing-generated-sdks.md
examples/: QUERY-EXAMPLES.md  README-STRUCTURE.md  README.md  REPORT-TESTING.md  adapter_demo.rs  live_query_demo.rs  query-batch-count-multi.yaml  query-batch-search.json  query-multi-and.json  query-multi-or.json  query-multi-or.yaml  query-single-json-objects.json  query-single.json  query-single.yaml  test-queries.sh  test-report-queries.sh
proptest-regressions/: .gitkeep
scripts/: VALIDATION-PARITY.md  VALIDATION.md  bump_version.sh  capture_fixture_using_sdk.py  capture_fixture_with_wheel.sh  capture_python_fixture.sh  collect_goat_log_fixtures.py  collect_parity_fixtures.py  collect_v3_responses.py  debug_fixture_check.py  dev_site.sh  extract_feature_fixtures.sh  generate_reports.sh  measure_coverage.sh  organize_artifacts.sh  test_sdk_fixtures.sh  test_sdk_generation.sh  validate_artifacts.sh  validate_cli.sh  validate_javascript_sdk.js  validate_javascript_sdk.sh  validate_javascript_sdk_deep.mjs  validate_javascript_sdk_deep.sh  validate_python_sdk.py  validate_python_sdk.sh  validate_python_sdk_deep.py  validate_python_sdk_deep.sh  validate_r_sdk.R  validate_r_sdk.sh  validate_r_sdk_deep.R  validate_r_sdk_deep.sh  validate_templates.sh  verify_code.sh
sites/: boat-cli-options.yaml  boat.yaml  goat-cli-options.yaml  (+4 more)
(+266 files in other folders)
