[build-system]
requires      = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name             = "cli-generator"
requires-python  = ">=3.9"
license          = { file = "LICENSE" }
classifiers      = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
]
# Version, description, readme, and authors are read from Cargo.toml by maturin.
dynamic = ["version", "description", "readme", "authors"]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "isort>=5.13",
    "pytest>=8.0",
    "hypothesis[cli]>=6.100",
    "maturin>=1.0",
    "pyright>=1.1",
]

# ---------------------------------------------------------------------------
# Maturin
# ---------------------------------------------------------------------------
[tool.maturin]
# Python source lives under python/ to avoid import confusion with the local
# package directory during development.
python-source = "python"
# Always activate the extension-module feature when maturin builds a wheel.
features      = ["extension-module"]
bindings      = "pyo3"

# ---------------------------------------------------------------------------
# Black
# ---------------------------------------------------------------------------
[tool.black]
line-length     = 120
target-version  = ["py39", "py310", "py311", "py312"]

# ---------------------------------------------------------------------------
# isort
# ---------------------------------------------------------------------------
[tool.isort]
profile     = "black"
line_length = 120
src_paths   = ["python", "tests/python"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests/python"]
addopts   = ["-ra", "--strict-markers"]

# ---------------------------------------------------------------------------
# Hypothesis
# ---------------------------------------------------------------------------
[tool.hypothesis]
max_examples           = 100
suppress_health_check  = []
derandomize            = false

# ---------------------------------------------------------------------------
# Pyright
# ---------------------------------------------------------------------------
[tool.pyright]
pythonVersion     = "3.9"
typeCheckingMode  = "strict"
pythonPlatform    = "All"
# Tell pyright that packages live in python/ so imports like `import cli_generator`
# resolve via the stub at python/cli_generator/cli_generator.pyi.
extraPaths        = ["python"]
include           = ["python", "tests/python"]
