[package]
name = "genomehubs-query"
version = "0.1.0"
edition = "2021"
description = "Pure URL builder for genomehubs search API queries (WASM-compatible)"
license = "MIT"

# cdylib is needed for wasm-pack to produce a .wasm binary.
# rlib is needed for use as a dependency from cli-generator.
[lib]
name = "genomehubs_query"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
percent-encoding = "2"
wasm-bindgen = { version = "0.2", optional = true }

# getrandom needs the "js" feature when targeting wasm32
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[features]
default = []
wasm = ["dep:wasm-bindgen"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
